<resources>
    <string name="app_name">Xpense</string>

    <!-- used in signin page too -->
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_no">Enter Phone Number</string>
    <string name="enter_otp">Enter OTP</string>


    <!--signUp page values -->
    <string name="get_otp">Get Otp</string>
    <string name="login">LogIn</string>
    <string name="otp">OTP</string>
    <string name="new_user">New User ?</string>
    <string name="login_text">LogIn</string>
    <string name="signup_text">SignUp !</string>

    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="personal">Personal</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- signIn page values -->
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="signup">SignUp</string>

    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>

    <!--toolbar values -->
    <string name="add_contact">add contact</string>
    <string name="add_group">add group</string>
    <string name="add_personal_items">add personal items</string>

    <string name="message">Enetr the new category name</string>
</resources>