<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn_Page"
    android:background="@drawable/login_back"
    android:layout_gravity="center"
    android:padding="10dp">


        <EditText
            android:id="@+id/phone_no"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="308dp"
            android:drawableStart="@drawable/ic_login_phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/manjari"
            android:hint="@string/enter_phone_no"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/get_otp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:text="@string/get_otp"
            android:textColor="#00BCD4"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_no" />

        <EditText
            android:id="@+id/otp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_login_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/manjari"
            android:hint="@string/enter_otp"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.624" />

        <Button
            android:id="@+id/sign_up_log"
            android:layout_width="95dp"
            android:layout_height="45dp"
            android:layout_marginBottom="184dp"
            android:backgroundTint="#38C98D"
            android:drawableEnd="@drawable/ic_login_arrow"
            android:drawablePadding="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:enabled="false"
            android:text="@string/login"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/new_user"
            android:layout_width="95dp"
            android:layout_height="45dp"
            android:layout_marginStart="224dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="124dp"
            android:backgroundTint="#38C98D"
            android:drawableLeft="@drawable/ic_signup_icon"
            android:drawablePadding="10dp"
            android:paddingLeft="8dp"
            android:paddingEnd="4dp"
            android:paddingRight="8dp"
            android:text="@string/signup"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:iconPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="83dp"
            android:layout_height="31dp"
            android:layout_marginStart="103dp"
            android:layout_marginBottom="132dp"
            android:fontFamily="@font/manjari"
            android:paddingTop="5dp"
            android:text="@string/new_user"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/new_user"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="176dp"
            android:drawableStart="@drawable/ic_login_icon"
            android:fontFamily="@font/manjari"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:text="Login"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="215dp"
            android:fontFamily="@font/manjari"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/manjari"
            android:text="@string/otp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/otp"
            app:layout_constraintEnd_toStartOf="@+id/otp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_no" />

</androidx.constraintlayout.widget.ConstraintLayout>